frontend/src/App.css
/*Feedback*/

.Feedback_header{
  margin-left: 10vw;
  margin-right: 10vw;
  width: 60%;
}

.contact_form--input{
  border-color: darkcyan;
  border-width: thin;
  background: transparent;
  width: 65%;
  border-radius: 2px;
}

.feedback_card{
  background-color:rgb(235, 247, 255);
  border-radius: 5px;
  min-width: 250px;
  max-width: 310px;
  padding: 10px;
  display: grid;
  gap: 7px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.gap{
  gap: 24px;
}

body{
  font-family: "Quicksand", sans-serif;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.svg-rotate{
  transform: rotate(90deg);
}


.user{
  height: 400px;
  width: 150px;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 2px solid yellow;
  position: absolute;
}
.client{
  height: 20rem;
}

.slide {
  color: gray;
  transition: transform 0.3s ease-in-out;
  font-weight: 100;
 }
 
 .slide.active {
  color: black;
  transform: scale(1.1);
  font-weight: 700;
 }


 /* CSS for active state */
.active {
  color: black;
  font-weight: 500;
  font-size: large;
 }
 
 /* CSS for inactive state */
 .inactive {
  color: gray;
 }

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

.activeNav {
  font-weight: 800;
  color: rgb(247, 247, 4); /* Or any other style you want to apply to the active link */
 }


 /* //arrow in upcoming groups  */
 .nextArrow, .prevArrow {
  cursor: pointer;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background: black;
  padding: 10px;
  border-radius: 5px;
 }
 
 .nextArrow {
  right: 10px;
 }
 
 .prevArrow {
  left: 10px;
 }

 .prevArrow {
  visibility: visible;
  display: block; 
  z-index: 10; 
 }

